--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,7 @@ img {
   border-radius: 4px;
   padding: 0;
   border: none;
+  cursor: pointer;
   /* position: relative;
   left: 50%;
   transform: translate(-50%, 0); */
@@ -511,8 +512,10 @@ img {
 .footer-title-icon {
   margin-right: 93px;
 }
-.subscription-form {
+.subscription-form:not(:last-child) {
   display: flex;
+  justify-content: right;
+  margin-right: 10px;
 }
 .footer-title,
 .footer-title-subscription {
@@ -526,18 +529,23 @@ img {
   text-transform: uppercase;
   margin-top: 15px;
 }
-.online-input {
+.footer-title-subscription {
   display: block;
+}
+
+.online-input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 4px;
   background: transparent;
   outline: none;
+  padding-left: 16px;
+  color: #ffffff;
+  margin-right: 12px;
 }
 .subscription-btn {
   content: "";
-  display: block;
   width: 200px;
   height: 50px;
   border-radius: 4px;
@@ -551,14 +559,22 @@ img {
   text-align: center;
   padding: 0;
   border: none;
-  margin: 0 auto;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-title-subscription-block {
-  padding-right: 215px;
+  margin-right: 250px;
+  justify-content: center;
+  text-align: center;
 }
 .subscription-form {
   position: absolute;
+
+  margin-bottom: 20px;
+}
+.online-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  font-weight: calc(20 / 16);
+
+  color: rgba(117, 117, 117, 0.5);
 }
 /* -------------FILTR-------------------- */
 .button-projects-list {
@@ -713,8 +729,12 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
   padding: 0;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
-
+.close-btn:focus {
+  fill: var(--accent-color);
+}
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -722,90 +742,128 @@ img {
 }
 
 /* ------------------MODAL WINDOW STYLE------------- */
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
 
 .modal-title {
-  font-size: 20px;
   font-weight: 700;
+  font-size: 20px;
   text-align: center;
   color: var(--main-title-color);
-  display: block;
   margin-bottom: 12px;
 }
-
-.modal-form-field {
-  margin-bottom: 4px;
+.modal-form {
+  display: flex;
+  flex-direction: column;
 }
-
-.modal-form-label {
-  font-size: 12px;
-  color: var(--main-text-color);
-  display: block;
-  margin-bottom: 4px;
-}
-
-.input-wrap {
-  display: block;
+.modal-form-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  align-self: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  padding: 0;
+  border: none;
   position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-form-btn:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
 .modal-form-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 12px;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+.modal-form-label {
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  color: var(--main-text-color);
+}
 .modal-form-icon {
   position: absolute;
-  left: 10px;
   top: 50%;
   transform: translateY(-50%);
+  left: 12px;
+  display: block;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+.modal-form-field {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+}
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background-image: url(../images/icon\ check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border: #2196f3;
+}
+.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
+  border: 2px solid rgba(33, 150, 243, 0.9);
 }
 
-.modal-comment {
+.modal-form-message {
   width: 100%;
   height: 120px;
+  margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 16px;
-  padding-top: 12px;
+  padding: 12px 16px;
   resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-comment::placeholder {
-  font-size: 14px;
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--accent-color);
 }
-
-.check-label {
+.modal-form-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-checkbox-label::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 1.8px solid #212121;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 8.4px;
+}
+.modal-form-checkbox-label {
   display: flex;
   align-items: center;
-}
-.form-btn {
-  position: absolute;
-  width: 200px;
-  height: 50px;
-  color: var(--secondary-title-color);
-  background-color: var(--accent-color);
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
-  text-align: center;
-  padding: 0;
-  border: none;
-  margin: 0 auto;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form-link {
-  color: var(--accent-color);
-}
-.text-check {
+  font-size: 14px;
+  line-height: calc(24 / 14);
   color: var(--main-text-color);
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+.modal-form-label-link {
+  color: var(--accent-color);
 }
