--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,9 @@ img {
   display: flex;
   justify-content: center;
 }
+.client-item:first-child {
+  margin-left: -30px;
+}
 .client-link {
   width: 100%;
   height: 100%;
@@ -472,6 +475,7 @@ img {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  display: block;
 }
 .footer-information {
   display: flex;
@@ -576,6 +580,7 @@ img {
 
   color: rgba(117, 117, 117, 0.5);
 }
+
 /* -------------FILTR-------------------- */
 .button-projects-list {
   display: flex;
@@ -732,7 +737,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
-.close-btn:focus {
+.close-btn:focus,
+.close-btn:hover {
   fill: var(--accent-color);
 }
 .is-hidden {
@@ -772,8 +778,6 @@ img {
   padding: 0;
   border: none;
   position: relative;
-  left: 50%;
-  transform: translate(-50%, 0);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-btn:focus {
@@ -863,7 +867,10 @@ img {
   color: var(--main-text-color);
   letter-spacing: 0.03em;
   margin-bottom: 30px;
+  padding-left: 11px;
 }
 .modal-form-label-link {
   color: var(--accent-color);
+}
+.modal-form {
 }
